footer and homepage - update 2

--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
   "dependencies": {
     "@astrojs/rss": "^4.0.1",
     "@astrojs/sitemap": "^3.0.3",
+    "@astrojs/vue": "^4.0.5",
     "@astrolib/analytics": "^0.5.0",
     "@astrolib/seo": "^1.0.0-beta.5",
     "@fontsource-variable/inter": "^5.0.16",
     "astro": "^4.0.6",
     "astro-icon": "1.0.0-next.2",
+    "dayjs": "^1.11.10",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
     "typescript-esbuild": "^0.3.2",
-    "unpic": "^3.15.0"
+    "unpic": "^3.15.0",
+    "vue": "^3.3.13"
   },
   "devDependencies": {
     "@astrojs/mdx": "^2.0.0",
