--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@astrolib/seo": "^1.0.0-beta.5",
     "@fontsource-variable/inter": "^5.0.16",
     "astro": "^4.0.6",
-    "astro-icon": "1.0.0-next.2",
+    "astro-icon": "^1.1.5",
+    "cheerio": "^1.0.0",
     "dayjs": "^1.11.10",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
