--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@astrolib/analytics": "^0.5.0",
     "@astrolib/seo": "^1.0.0-beta.5",
     "@fontsource-variable/inter": "^5.0.16",
+    "@supabase/supabase-js": "^2.49.4",
     "astro": "^4.0.6",
     "astro-icon": "^1.1.5",
     "cheerio": "^1.0.0",
